--- a/Chrome/karmo.less
+++ b/Chrome/karmo.less
@@ -63,7 +63,7 @@
 .karmo-large-bet-view .betting {
 	display: inline-block;
 	vertical-align: top;
-	width: 52%;
+	width: 450px;
 
 	figure {
 		display: inline-block;
@@ -73,7 +73,7 @@
 	}
 
 	.odds-view {
-		width: 110px;
+		width: 100px;
 		margin-top: 12px;
 
 		.odds {
@@ -92,17 +92,24 @@
 	.edit-bet {
 		h3 {
 			font-size: 24px;
+			line-height: 140%;
 
 			input {
 				width: 60px;
 				padding: 4px 8px;
 				display: inline-block;
 				vertical-align: top;
+				margin-top: 4px;
+			}
+
+			select {
+				vertical-align: top;
+				margin-top: 8px;
 			}
 		}
 
 		.bet-slider {
-			width: 280px;
+			width: 320px;
 		}
 
 		h5 {
@@ -128,7 +135,7 @@
 	display: inline-block;
 	vertical-align: top;
 	margin-left: 12px;
-	width: 46%;
+	width: 330px;
 
 	ul {
 		margin: 0;
@@ -140,6 +147,55 @@
 	}
 }
 
+.karmo-main-bet-view {
+	font-family: Arial;
+
+	.bet {
+		border-bottom: 1px solid #ccc;
+		margin: 4px;
+
+		.odds {
+			font-size: 36px;
+			font-weight: bold;
+			text-align: center;
+			display: inline-block;
+			margin: 6px;
+		}
+
+		.info {
+			display: inline-block;
+			vertical-align: top;
+			margin-top: 4px;
+			color: #444;
+			border-left: 1px solid #bbb;
+			padding-left: 12px;
+
+			h3 {
+				font-size: 24px;
+				font-weight: normal;
+
+				a {
+					font-weight: bold;
+					text-decoration: underline;
+				}
+
+				span {
+					font-weight: bold;
+				}
+			}
+
+			h5 {
+				font-size: 14px;
+				color: #777;
+			}
+		}
+	}
+
+	.bet:last-child {
+		border-bottom: none;
+	}
+}
+
 .karmo-dot {
 	display: inline-block;
 	width: 8px;
@@ -148,3 +204,34 @@
 	border-radius: 8px;
 	cursor: pointer;
 }
+
+#karmo-notification {
+	position: fixed;
+	z-index: 100;
+	bottom: 0;
+	right: 0;
+	width: 280px;
+	background: #cee3f8;
+	border: 1px solid #5f99cf;
+	border-radius: 6px;
+	margin: 8px;
+	padding: 8px;
+	font-family: Arial;
+	box-shadow: 0 1px 0 darken(#5f99cf, 5%);
+	cursor: pointer;
+	opacity: 0;
+	-webkit-transform: translate(0, 20px);
+	-webkit-transition: all 100ms;
+
+	h3 {
+		font-weight: bold;
+		margin-bottom: 6px;
+		font-size: 18px;
+	}
+
+	p {
+		font-size: 14px;
+		color: rgba(0,0,0,0.6);
+	}
+}
+
