--- a/Chrome/karmo.less
+++ b/Chrome/karmo.less
@@ -154,6 +154,10 @@
 		border-bottom: 1px solid #ccc;
 		margin: 4px;
 
+		.Won { color: green; }
+		.Lost { color: red; }
+		.Pending { color: orange; }
+
 		.odds {
 			font-size: 36px;
 			font-weight: bold;
@@ -193,6 +197,39 @@
 
 	.bet:last-child {
 		border-bottom: none;
+	}
+}
+
+#karmo-loading {
+	text-align: center;
+	font-size: 18px;
+	color: rgba(0,0,0,0.4);
+	margin-top: 140px;
+	display: none;
+}
+
+#karmo-loading.active {
+	display: block;
+}
+
+.karmo-list-options {
+	p {
+		font-size: 16px;
+		color: #444;
+		font-family: Arial;
+		border-bottom: 1px dotted rgba(0,0,0,0.3);
+		padding: 6px;
+		margin: 6px;
+
+		a {
+			font-weight: bold;
+			text-decoration: underline;
+		}
+
+		.highlighted {
+			text-decoration: none;
+			font-weight: normal;
+		}
 	}
 }
 
